# advancedprogramming

./: .gitignore  README.md
bots/: CMakeLists.txt  Doxyfile  README.md  bot.cpp  bot.h  bots.cpp  bots.h  playground.cpp
lectures/: Makefile  compilacion.md
lectures/lecture1/: Makefile  README.md  compile.sh  example.cpp  lecture1.md
lectures/lecture10/: README.md
lectures/lecture11/: README.md  example.pl  functional.cpp  functional.hs  symbolic.clj
lectures/lecture12/: CMakeLists.txt  README.md  test_boost.cpp
lectures/lecture13/: CMakeLists.txt  README.md  qtapp.cpp  qtcompiled.cpp  qtcompiled.ui  qtloaded.cpp  qtquick.qml  qtwindow.ui
lectures/lecture14/: README.md
lectures/lecture15/: README.md
lectures/lecture2/: CMakeLists.txt  Makefile  README.md  big_o.cpp  iterators.cpp  loop_exercises.cpp
lectures/lecture3/: CMakeLists.txt  README.md  raii_exceptions.cpp  rvalues_lvalues.cpp
lectures/lecture4/: CMakeLists.txt  README.md  lecture4.cpp  namespaces.cpp  raii.cpp
lectures/lecture5/: README.md  auto_and_lambdas.cpp  inheritance.cpp
lectures/lecture6/: CMakeLists.txt  README.md  mpi_test  mpi_test.cpp  output.txt  sockets.cpp  threads  threads.cpp
lectures/lecture7/: CMakeLists.txt  README.md
lectures/lecture8/: README.md  templates.cpp
lectures/lecture9/: README.md  pointers.cpp
src/: Makefile  lambda.cpp  templates.cpp
